--- a/src/studio.qrc
+++ b/src/studio.qrc
@@ -1,6 +1,5 @@
-CTYPE RCC><RCC version="1.0">
+<!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file>data/items.json</file>
 </qresource>
 </RCC>
-
